# ci-cd-ejemplo

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/app/: calculator.py
tests/: test_calculator.py
